tests/semantic/invalid/expected/wrong_operator_types.txt
semantic error: несоответствие типов - несоответствие типов в недопустимая операция '+' для типов bool и int
  --> tests/semantic/invalid/wrong_operator_types.src:5:13
5      int y = b + x;
               ^
   = подсказка: проверьте типы операндов

semantic error: несоответствие типов - несоответствие типов в недопустимая операция '&&' для типов int и bool
  --> tests/semantic/invalid/wrong_operator_types.src:7:14
7      bool c = x && b;
                ^
   = подсказка: проверьте типы операндов

semantic error: недопустимая операция - оператор '%' требует целочисленный левый операнд
  --> tests/semantic/invalid/wrong_operator_types.src:10:9
10      x = f % x;
            ^
   = получено: float
   = подсказка: оператор % работает только с целыми числами (int)

